[tool.poetry]
name = "tpch"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.0.0"
sphinx-design = "0.5.0"
sphinxext-altair = "0.2.0"
altair = "5.1.2"
insipid-sphinx-theme = "0.4.2"

[tool.poetry.dev-dependencies]
sphinx-autobuild = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"